Tamanho do icone de contato

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,8 +13,8 @@
 
   
   <ion-item *ngFor= "let contato of contatos">
-    <ion-avatar slot="start">
-      <img src="../assets/images/user.png">
+    <ion-avatar slot="start" style="width: 80px; height: 80px;">
+      <img src="../assets/images/user.png" >
     </ion-avatar>
     <ion-label>
       <h2>{{contato.nome}}</h2>
